# jenkins_bot

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: buildpushimage.yml
src/: check_updates.rs  main.rs
