[package]
name = "jenkins_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.4", default-features = false, features = ["client", "cache", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
reqwest = "0.11.11"
serde_json = "1.0.82"
lazy_static = "1.3.0"
chrono = "0.4"
rand = "0.8.5"